--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,10 +1,4 @@
-$Google-font: 'Roboto', sans-serif;
-$Google-font-condensed: 'Roboto Condensed', sans-serif;
-$Google-font-mono: 'Roboto Mono', monospace;;
-$Google-font-sans: 'Open Sans', sans-serif;
-$Color-font: #424242;
-$Color-grey: grey;
-$Space-top: 6vh;
+@import "variables";
 
 *{
   box-sizing: border-box;
@@ -88,26 +82,18 @@ $Space-top: 6vh;
   font-size: 1.3em;
 }
 
-.gallery {
-    img {
-      width: 100%;
-    }
-}
-
 .image-fifty {
     img {
       width: 100%;
     }
 }
 
-.horizontal {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-}
-
 hr {
     border: 2px solid #4285F4;
+}
+
+.special-hr {
+    border: 1.5px solid #EFEFEF;
 }
 
 .box-text {
@@ -126,6 +112,12 @@ hr {
     }
 }
 
+.horizontal {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
 .no-padding {
   div {
     div {
@@ -134,4 +126,14 @@ hr {
   }
 }
 
+footer {
+  div {
+      font-size: .85em;
+  }
+}
 
+ul {
+  li {
+    list-style: none;
+  }
+}
